trunk/Archive2/08/890274e0b874b4/output
main.cpp: In function 'int main()':
main.cpp:8:19: error: no match for ternary 'operator?:' (operand types are 'bool', 'main()::<lambda(auto:1)>', and 'main()::<lambda(auto:2)>')
     auto a = true ? f : g;
                   ^
